# Optimus-AMR

./: README.md
Documents/: readme
description/: CMakeLists.txt  package.xml
description/launch/: display.launch.py  gazebo_new.launch.xml  open_manipulator_x.launch.py  open_manipulator_x_gazebo.launch.py
description/rviz/: new_config.rviz
description/urdf/: open_manipulator_x.ros2_control_gazebo.xacro  open_manipulator_x.urdf.xacro  open_manipulator_x.xacro  open_manipulator_x_gazebo.urdf.xacro
diffdrive_bot/: CMakeLists.txt  diffdrive_bot.xml  package.xml
diffdrive_bot/bringup/config/: mapper_params_online_async.yaml  mira_controller.yaml  twist_mux.yaml
diffdrive_bot/bringup/launch/: custom_cartographer.launch.py  diffbot.launch.py  gazebo.launch.py  gazebo_display.launch.xml  localization_launch.py  navigation_launch.py  online_async_launch.py  robot_state_publsiher.xml  rviz.launch.xml  test_robot.launch.py
diffdrive_bot/bringup/worlds/: maze.world
diffdrive_bot/description/ros2_control/: diffbot.ros2_control.xacro
diffdrive_bot/description/rviz/: cartographer.rviz  mira.rviz  rviz_config.rviz
diffdrive_bot/description/urdf/: common_properties.xacro  lidar.xacro  mira.urdf.xacro  mira_base.xacro  mira_gazebo.urdf.xacro  mira_gazebo.xacro
diffdrive_bot/hardware/include/diffdrive_bot/: diffbot_system.hpp  drive.hpp  motor_handler.hpp
diffdrive_bot/hardware/src/: diffbot_system.cpp  motor_handler.cpp
effort_test/: CMakeLists.txt  package.xml
effort_test/config/: controllers.yaml
effort_test/launch/: gazebo_launch.launch.xml  rviz_launch.launch.xml
effort_test/rviz/: pendullum.rviz
effort_test/urdf/: pendullum.urdf.xacro  pendullum_core.xacro  pendullum_gazebo.xacro
sensor_manip/: CMakeLists.txt  package.xml
sensor_manip/src/: scan_update.cpp
